--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>+DBS - Comunidad de Competición</title>
+    <link rel="icon" type="image/png" href="/img/logo/+dbs 2.png">
     <link rel="stylesheet" href="./css/styles.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -41,10 +42,10 @@
 
     <!-- HERO -->
     <section class="hero">
-        <img class="hero-img" src="/img/hero.png" alt="Hero Car">
+        <img class="hero-img" src="/img/logo/+dbs 1.png" alt="Hero Car">
 
         <div class="hero-content">
-            <h1>Competencia Nacional de AudioCar <br> Competición + Medición</h1>
+            <h1>Competencia Nacional de AudioCar <br></h1>
             <p>Únete a la emoción. Explora nuestros próximos eventos y sé parte de la acción que define la temporada.
             </p><br>
             <a class="btn-dark" href="#torneos">Ver Próximo Evento</a>
