--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
 
     <!-- HERO -->
     <section class="hero">
-        <img class="hero-img" src="/img/logo/+dbs 1.png" alt="Hero Car">
+        <picture>
+            <!-- Imagen para celular -->
+            <source srcset="/img/logo/+dbs 1.png" media="(max-width: 768px)">
+            <!-- Imagen para desktop -->
+            <img src="/img/logo/+dbs 2.png" alt="Banner principal">
+        </picture>
 
         <div class="hero-content">
             <h1>Competencia Nacional de AudioCar <br></h1>
@@ -119,69 +124,67 @@
                 <h3>Lo Mejor del Torneo Relámpago 1</h3>
             </div>
         </div> -->
-        <!-- Partners -->
-        <section class="container partners">
-            <h2>Nuestros Partners</h2>
-            <div class="partners-row">
-                <a href="http://devweb.uno"><img src="/img/partners/devweb-logo-nav.png" alt="DevWeb"
-                        target="_blank"></a>
-                <!-- <img src="p2.png">
+    <!-- Partners -->
+    <section class="container partners">
+        <h2>Nuestros Partners</h2>
+        <div class="partners-row">
+            <a href="http://devweb.uno"><img src="/img/partners/devweb-logo-nav.png" alt="DevWeb" target="_blank"></a>
+            <!-- <img src="p2.png">
             <img src="p3.png">
             <img src="p4.png">
             <img src="p5.png">
             <img src="p6.png"> -->
-            </div>
-        </section>
+        </div>
+    </section>
 
-        <!-- FOOTER -->
-        <footer>
-            <div class="footer-columns">
+    <!-- FOOTER -->
+    <footer>
+        <div class="footer-columns">
 
-                <div>
-                    <img src="/img/logo/+dbs 2.png" class="logo logo-dark">
-                    <img src="/img/logo/+dbs 1.png" class="logo logo-light">
-                    <p>La comunidad definitiva para eventos y competición.</p>
-                </div>
-
-                <div>
-                    <h4>Navegación</h4>
-                    <a href="index.html">Inicio</a>
-                    <a href="#ranking">Ranking</a>
-                    <a href="#torneos">Torneos</a>
-                    <a href="#contacto">Contacto</a>
-                </div>
-
-                <div>
-                    <h4>Información</h4>
-                    <a href="#">Reglamento</a>
-                    <a href="#fotos">Fotos</a>
-                </div>
-
-                <div>
-                    <h4>Empresa</h4>
-                    <a href="#">Sobre Nosotros</a>
-                </div>
-
-                <div id="contacto">
-                    <h4>Contacto</h4>
-                    <div class="socials">
-                        <a href="https://www.instagram.com/masdbscompetencias" target="_blank"
-                            rel="noopener noreferrer">
-                            <img src="/img/logo/3721672-instagram_108066.png" alt="Instagram">
-                        </a>
-
-
-                        <a href="https://wa.me/+5493764730666" target="_blank" rel="noopener noreferrer">
-                            <img src="/img/logo/iconfinder-whatsapp-4661617_122497.png" alt="WhatsApp">
-                        </a>
-                    </div>
-                </div>
-
+            <div>
+                <img src="/img/logo/+dbs 2.png" class="logo logo-dark">
+                <img src="/img/logo/+dbs 1.png" class="logo logo-light">
+                <p>La comunidad definitiva para eventos y competición.</p>
             </div>
 
-            <p class="copy">© 2026 +DBS. Todos los derechos reservados.</p>
-        </footer>
-        <script src="/js/script.js"></script>
+            <div>
+                <h4>Navegación</h4>
+                <a href="index.html">Inicio</a>
+                <a href="#ranking">Ranking</a>
+                <a href="#torneos">Torneos</a>
+                <a href="#contacto">Contacto</a>
+            </div>
+
+            <div>
+                <h4>Información</h4>
+                <a href="#">Reglamento</a>
+                <a href="#fotos">Fotos</a>
+            </div>
+
+            <div>
+                <h4>Empresa</h4>
+                <a href="#">Sobre Nosotros</a>
+            </div>
+
+            <div id="contacto">
+                <h4>Contacto</h4>
+                <div class="socials">
+                    <a href="https://www.instagram.com/masdbscompetencias" target="_blank" rel="noopener noreferrer">
+                        <img src="/img/logo/3721672-instagram_108066.png" alt="Instagram">
+                    </a>
+
+
+                    <a href="https://wa.me/+5493764730666" target="_blank" rel="noopener noreferrer">
+                        <img src="/img/logo/iconfinder-whatsapp-4661617_122497.png" alt="WhatsApp">
+                    </a>
+                </div>
+            </div>
+
+        </div>
+
+        <p class="copy">© 2026 +DBS. Todos los derechos reservados.</p>
+    </footer>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
