cambios modo oscuro

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
             <div class="nav-right">
-                <!-- <button class="theme-toggle" id="themeToggle">🌙</button>-->
+                 <button class="theme-toggle" id="themeToggle">🌙</button>
                 <button class="hamburger" id="hamburger">
                     <span></span>
                     <span></span>
